MODON MRE BPDEV/force-app/main/default/objects/Engagements__c/Engagements__c.object-meta.xml
<CustomObject>
    <label>Engagements</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>