MODON MRE BPDEV/force-app/main/default/objects/Engagements__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact_Persons__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>