MODON MRE BPDEV/force-app/main/default/objects/Engagements__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gift Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>