MODON MRE BPDEV/force-app/main/default/objects/Engagements__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Opened</fullName>
            </value>
            <value>
                <fullName>Link Clicked</fullName>
            </value>
            <value>
                <fullName>Attachment Downloaded</fullName>
            </value>
            <value>
                <fullName>Email Reply</fullName>
            </value>
            <value>
                <fullName>Forward/Share</fullName>
            </value>
            <value>
                <fullName>Meeting Booked|</fullName>
            </value>
            <value>
                <fullName>Meeting Attended</fullName>
            </value>
            <value>
                <fullName>Meeting No-show</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Bounced Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>